src/sections/Footer/FooterMid.scss
// .footer-mid {
//   font-size: 12px;
//   // margin: 10px auto;
//   // text-align: center;
//   // max-width: 1000px;

//   color: #ddd;
//   line-height: 18px;
//   white-space: nowrap;
//   width: 100%;
//   display: flex;
//   align-items: center;
//   justify-content: center;
//   padding-top: 18px;
// }

// .footer-logo-container {
//   padding: 0 0.6em;
//   display: inline-block;
//   // margin: 30px 0 15px;
// }

// .footer-logo {
//   text-decoration: none;
//   padding: 0 0.6em;

//   div {
//     width: 76px;
//     height: 23px;
//     // margin: 0 auto;
//     background-image: var(--sprite-sm);
//     background-position: -10px -90px;
//     background-repeat: repeat-x;
//   }
// }

.footer-mid {
  margin: 10px auto;
  text-align: center;
  width: 1000px;
  min-width: 1000px;
  max-width: 1000px;
  color: #ddd;
  white-space: nowrap;
  line-height: 18px;
}

.footer-logo-container {
  white-space: normal;
  padding: 0 0.6em;
  display: inline-block;
  list-style-type: none;
  font-size: 12px;
  text-align: center;
  max-width: 1000px;
  margin: 30px auto 15px;
  line-height: 0;
  white-space: nowrap;
  padding-left: 32px;
}

.footer-logo {
  text-decoration: none;
  white-space: nowrap;
  padding: 0 0.6em;

  div {
    background-position: -10px -90px;
    width: 76px;
    height: 23px;
    margin: 0 auto;
    background-image: var(--sprite-sm);
    background-repeat: repeat-x;
  }
}

.options-container {
  white-space: normal;
  vertical-align: top;
  margin: 18px auto 0; // wasn't here
  margin-left: 66px;
  padding: 0 0.6em;
  display: inline-block;

  .inner-container {
    font-size: 12px;
    color: #ddd;
    text-align: center; // wasn't here
    line-height: 18px;
    white-space: nowrap;

    a {
      text-decoration: none;
      white-space: normal;
      display: inline-block;
      border: 1px solid #848688;
      border-radius: 3px;
      padding: 6px 18px 6px 8px;
      font-size: 13px;
      margin-right: 8px;
    }
  }
}

.globe-icon {
  width: 15px;
  height: 15px;
  background-position: -77px -24px !important;
  top: 2px;
  position: relative;
  background: var(--flags-sprite);
  display: inline-block;
}

.option-label {
  color: #ccc;
  white-space: normal;
  padding: 0 0.6em;
  display: inline-block;
}

.select-arrow-icon {
  display: inline-block;
  white-space: normal;
  background: var(--flags-sprite);
  width: 12px;
  height: 12px;
  background-position: -77px -80px;
  position: relative;
  left: 12px;
  padding: 0 0.6em;
}

.currency {
  color: var(--text-light);
  margin: 3px 0 0;
  white-space: normal;
  display: inline-block;
}

.us-flag {
  margin: 3px 0 0;
  background-position: -54px -108px;
  top: 1px;
  padding: 0 0.6em;
  display: inline-block;
  width: 18px;
  height: 12px;
  position: relative;
  background-image: var(--flags-sprite);
}

